--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,7 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<%= link_to "<< Back to Articles List", articles_path %>
+<%= link_to "<< Back to Articles List", articles_path %><br/>
+<%= link_to "edit", edit_article_path(@article) %><br/>
+<%= button_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger", form: { class: "d-inline" } %>
+
 
