--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,6 +2,16 @@
 <p><%= @article.body %></p>
 <%= link_to "<< Back to Articles List", articles_path %><br/>
 <%= link_to "edit", edit_article_path(@article) %><br/>
-<%= button_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger", form: { class: "d-inline" } %>
+<%= button_to "Delete", article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger", form: { class: "d-inline" } %><br/>
+
+	
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+
+<%= render partial: 'articles/comment', collection: @article.comments %>
+
+
+	
+<%= render 'comments/form' %>
 
 
