--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,3 +15,13 @@
 <%= render 'comments/form' %>
 
 
+<p>
+Tags:
+<% @article.tags.each do |tag| %>
+  <%= link_to tag.name, tag_path(tag) %>
+<% end %>
+</p>
+
+
+
+
