--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,6 +15,12 @@
 <%= render 'comments/form' %>
 
 
+<p><%= image_tag @article.image.url %></p>
+<p><%= image_tag @article.image.url(:medium) %></p>
+
+
+
+
 <p>
 Tags:
 <% @article.tags.each do |tag| %>
